<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_clientes"
        android:title="@string/clientes"
        android:icon="@drawable/clientes_add" />
    <item
        android:id="@+id/nav_productos"
        android:title="@string/productos"
        android:icon="@drawable/baseline_all_inbox_24" />
    <item
        android:id="@+id/nav_facturacion"
        android:title="@string/facturaci_n"
        android:icon="@drawable/factura_add" />
    <item
        android:id="@+id/nav_reportes"
        android:title="@string/reportes"
        android:icon="@drawable/reporte_search" />
    <item
        android:id="@+id/nav_emisor"
        android:title="@string/emisor"
        android:icon="@drawable/empresa_info" />
    <item
        android:id="@+id/nav_informacion"
        android:title="@string/informacion"
        android:icon="@drawable/info" />
    <item
        android:id="@+id/nav_iniciar_sesion"
        android:title="@string/iniciar_sesi_n"
        android:icon="@drawable/logout" />
</menu>
