<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/facturacion_electronica" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="47dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/txtCedRbF"
                android:layout_width="179dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:textAlignment="center"
                android:textColorHint="@color/orange"
                android:textColor="@color/black"
                android:inputType="number"
                android:hint="@string/Bus_ced_ruc" />

            <Button
                android:id="@+id/btnBclF"
                android:layout_width="117dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#F47121"
                android:text="@string/buscar" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtNombusF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre" />
        <TextView
            android:id="@+id/txtCedbusF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cedula" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/txtProdRbF"
                android:layout_width="179dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:textAlignment="center"
                android:textColorHint="@color/orange"
                android:textColor="@color/black"
                android:inputType="number"
                android:hint="@string/codProd" />

            <Button
                android:id="@+id/btnProF"
                android:layout_width="117dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#F47121"
                android:text="@string/buscar" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvProdF"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtSubToF"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:text="@string/subtotal" />
        <TextView
            android:id="@+id/txtIvaF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/iva_12" />
        <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
            android:textColor="@color/black"
        android:text="@string/total" />

        <Button
            android:id="@+id/button3"
            android:layout_width="117dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#F47121"
            android:text="@string/facturar" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>