<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardCliente"
        android:layout_width="323dip"
        android:layout_height="59dip"
        android:layout_margin="8dp"
        android:background="#FDFDFD"
        android:backgroundTint="#FFFFFF"
        android:hapticFeedbackEnabled="false"
        app:cardCornerRadius="11dp"
        android:layout_marginTop="64dp"
        app:cardElevation="4dip">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtProducto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dip"
                android:text="@string/producto"
                android:textColor="@color/black"
                android:textAlignment="center" />
            <TextView
                android:id="@+id/txtStock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dip"
                android:text="@string/stock"
                android:textColor="@color/black"
                android:textAlignment="center" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <LinearLayout
                android:id="@+id/buttonsedit"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imgEditP"
                    android:layout_width="28dp"
                    android:layout_height="25dp"
                    android:background="@color/transparent"
                    android:contentDescription="@string/edit_client"
                    app:srcCompat="@drawable/baseline_arrow_circle_right_24" />

                <ImageButton
                    android:id="@+id/imgDeleteP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:contentDescription="@string/delete_client"
                    app:srcCompat="@drawable/baseline_arrow_circle_left_24" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>